--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.0.0",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@fontsource/roboto": "^4.5.7",
-    "@mui/material": "^5.8.2",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "@babel/core": "7.18.2",
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
+    "@fontsource/roboto": "4.5.7",
+    "@mui/material": "5.8.2",
+    "@types/react": "18.0.10",
+    "@types/react-dom": "18.0.5",
+    "https:": "*",
+    "null": "2.0.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-router-dom": "6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
