--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.18.2",
-    "@emotion/react": "11.9.0",
-    "@emotion/styled": "11.8.1",
-    "@fontsource/roboto": "4.5.7",
-    "@mui/material": "5.8.2",
-    "@types/react": "18.0.10",
-    "@types/react-dom": "18.0.5",
-    "https:": "*",
-    "null": "2.0.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-router-dom": "6.3.0"
+    "@babel/core": "^7.18.5",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@fontsource/roboto": "^4.5.7",
+    "@mui/material": "^5.8.4",
+    "@types/react-router-dom": "5.3.3",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "history": "^5.3.0",
+    "null": "^2.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
