--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@emotion/styled": "^11.9.3",
     "@fontsource/roboto": "^4.5.7",
     "@mui/material": "^5.8.4",
-    "@types/react-router-dom": "5.3.3",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-router-dom": "^5.3.3",
     "history": "^5.3.0",
     "null": "^2.0.0",
     "react": "^18.2.0",
